--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,15 +50,15 @@ jobs:
           docker tag go-demo:latest ${{ secrets.USERNAME }}/flask-demo:$VERSION
           docker push ${{ secrets.USERNAME }}/flask-demo:$VERSION
 
-#      - name: Trigger CI
-#        uses: InformaticsMatters/trigger-ci-action@1.0.1
-#        with:
-#          ci-owner: rongpengju1209
-#          ci-repository: go-cicd-kustomize
-#          ci-ref: refs/heads/master
-#          ci-user: rongpengju1209
-#          ci-user-token: ${{ secrets.CI_TOKEN }}
-#          ci-name: CI
-#          ci-inputs: >-
-#            image=${{ secrets.USER_NAME }}/flask-demo
-#            sha-tag=${{ github.sha }}
+      - name: Trigger CI
+        uses: InformaticsMatters/trigger-ci-action@1.0.1
+        with:
+          ci-owner: rongpengju1209
+          ci-repository: go-cicd-kustomize
+          ci-ref: refs/heads/master
+          ci-user: rongpengju1209
+          ci-user-token: ${{ secrets.CI_TOKEN }}
+          ci-name: CI
+          ci-inputs: >-
+            image=${{ secrets.USER_NAME }}/flask-demo
+            sha-tag=$VERSION
