--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Docker Login
-        uses: docker/login-action@v2.0.0
+        uses: aliyun/acr-login@v1
         with:
+          login-server: https://registry.cn-hangzhou.aliyuncs.com
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           logout: true
@@ -47,8 +48,8 @@ jobs:
       - name: build image
         run: |
           make image
-          docker tag go-demo:latest ${{ secrets.USERNAME }}/flask-demo:$VERSION
-          docker push ${{ secrets.USERNAME }}/flask-demo:$VERSION
+          docker tag go-demo:latest registry.cn-hangzhou.aliyuncs.com/kubernetes-study/go-cicd:$VERSION
+          docker push registry.cn-hangzhou.aliyuncs.com/kubernetes-study/go-cicd:$VERSION
 
       - name: Trigger CI
         uses: InformaticsMatters/trigger-ci-action@1.0.1
@@ -60,5 +61,5 @@ jobs:
           ci-user-token: ${{ secrets.CI_TOKEN }}
           ci-name: CI
           ci-inputs: >-
-            image=${{ secrets.USER_NAME }}/flask-demo
+            image=registry.cn-hangzhou.aliyuncs.com/kubernetes-study/go-cicd:$VERSION
             sha-tag=$VERSION
