--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,12 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,6 +26,14 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+
+      # 获取PR信息并将其添加到环境变量
+      - name: set PR_INFO
+        run: |
+          echo PR_NUMBER=$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }') >> $GITHUB_ENV
+          echo PR_TITLE=$(jq --raw-output .pull_request.title "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
+          echo PR_URL=$(jq --raw-output .pull_request.html_url "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
+          echo PR_USER=$(jq --raw-output .pull_request.user.login "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
 
       - name: Docker Login
         uses: aliyun/acr-login@v1
@@ -50,3 +62,14 @@ jobs:
           ci-inputs: >-
             image=registry.cn-hangzhou.aliyuncs.com/kubernetes-study/go-cicd
             sha-tag=${{ secrets.VERSION }}
+
+      - name: build success
+        if: ${{ success() }}
+        uses: fifsky/dingtalk-action@master
+        with:
+          url: https://oapi.dingtalk.com/robot/send?access_token=${{ secrets.DING_TOKEN }}
+          type: markdown
+          content: |
+            # 💯👨‍💻 Success 🎉🎉🎉
+            > Maven Build of [# ${{ env.PR_TITLE }}](${{ env.PR_URL }}) by ${{ env.PR_USER }} success
+            > ^_^ from github action message 
