feat: update to v7

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,10 @@ jobs:
 
       # 打印环境变量
       - name: print env
-        run: printenv
+        run: |
+          printenv
+          echo ">>>>>>>>>>>>>>>>>>>>>>>>>>>"
+          echo ${{ github.event }}
 
       - name: Docker Login
         uses: aliyun/acr-login@v1
